# raspi_microscope

./: CMakeLists.txt  README.md  debug.sh
include/: focus.h  video.h
python/src/: gui.py  raspi_microscope
src/: focus.cpp  main.cpp  video.cpp
